--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -4,63 +4,99 @@
   <p [innerHTML]="selectedNetwork.networkInformation.description"></p>
 </div>
 
-<h5>{{'SIDEBAR_EDIT_EDITING_TITLE' | translate}}</h5>
+<div class="nav nav-pills mb-3 flex-row" id="editsNav" role="tablist" aria-orientation="horizontal">
+  <a class="nav-link active" id="editsNavHighlights" data-toggle="pill" href="#editsNavHighlightsContent" role="tab"
+     aria-controls="editsNavHighlights" aria-selected="true">{{'SIDEBAR_EDIT_EDITING_TITLE' | translate}}</a>
+  <a class="nav-link" id="editsNavAspects" data-toggle="pill" href="#editsNavAspectsContent" role="tab"
+     aria-controls="editsNavAspects" aria-selected="false">{{'SIDEBAR_EDIT_ATTRIBUTES_TITLE' | translate}}</a>
+  <a class="nav-link" id="editsNavStyles" data-toggle="pill" href="#editsNavStylesContent" role="tab"
+     aria-controls="editsNavStyles" aria-selected="false">{{'SIDEBAR_EDIT_STYLE_TITLE' | translate}}</a>
+</div>
 
-<div class="alert alert-success" role="alert" id="test">
-  <fa-icon class="mr-2" [icon]="faPalette"></fa-icon><b>{{'SIDEBAR_EDIT_TOAST_UPDATE' | translate}}</b>
-  <hr>
-  <b>{{'SIDEBAR_EDIT_TOAST_NODES' | translate}}</b> {{highlightNodes}}<br>
-  <b>{{'SIDEBAR_EDIT_TOAST_EDGES' | translate}}</b> {{highlightEdges}}<br>
-  <b>{{'SIDEBAR_EDIT_TOAST_DURATION' | translate}}</b> {{highlightDuration}}<br>
+<div class="tab-content p-2" id="editsNavContent">
+
+  <!-- Edit: Highlight color -->
+  <div class="tab-pane fade show active" id="editsNavHighlightsContent" role="tabpanel"
+       aria-labelledby="editsNavHighlights">
+
+    <div class="alert alert-success" role="alert" id="test">
+      <fa-icon class="mr-2" [icon]="faPalette"></fa-icon>
+      <b>{{'SIDEBAR_EDIT_TOAST_UPDATE' | translate}}</b>
+      <hr>
+      <b>{{'SIDEBAR_EDIT_TOAST_NODES' | translate}}</b> {{highlightNodes}}<br>
+      <b>{{'SIDEBAR_EDIT_TOAST_EDGES' | translate}}</b> {{highlightEdges}}<br>
+      <b>{{'SIDEBAR_EDIT_TOAST_DURATION' | translate}}</b> {{highlightDuration}}<br>
+    </div>
+
+    <div class="form-row">
+
+      <label for="highlightNodesHex">{{'SIDEBAR_EDIT_LABEL_HEX_NODE' | translate}}</label>
+      <input type="text" class="form-control mb-2" id="highlightNodesHex" name="highlightNodesHex"
+             placeholder="#0000ff" [(ngModel)]="highlightNodes">
+
+      <label for="highlightEdgesHex">{{'SIDEBAR_EDIT_LABEL_HEX_EDGE' | translate}}</label>
+      <input type="text" class="form-control mb-2" id="highlightEdgesHex" name="highlightEdgesHex"
+             placeholder="#ff00ff" [(ngModel)]="highlightEdges">
+
+      <label for="highlightDuration">{{'SIDEBAR_EDIT_LABEL_DURATION' | translate}}</label>
+      <input type="number" min="0" step="1" class="form-control mb-2" id="highlightDuration"
+             name="highlightDuration"
+             placeholder="4000" [(ngModel)]="highlightDuration">
+
+      <button type="button" class="btn btn-outline-success btn-block mb-3"
+              (click)="graphService.setHighlightColorAndDuration(highlightNodes, highlightEdges, highlightDuration)">
+        {{'SIDEBAR_EDIT_BTN_SUBMIT' | translate}}</button>
+
+    </div>
+  </div>
+
+  <!-- Edit: Aspects -->
+  <div class="tab-pane fade" id="editsNavAspectsContent" role="tabpanel" aria-labelledby="editsNavAspects">
+
+    <div *ngFor="let aspect of selectedNetwork.aspectKeyValues" class="dropdown mb-2">
+      <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="aspectToggle" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+        {{aspect.name}}
+      </button>
+      <div class="dropdown-menu" aria-labelledby="aspectToggle">
+        <a *ngFor="let aspectValue of aspect.values" class="dropdown-item">{{aspectValue}}</a>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Edit: Styles -->
+  <div class="tab-pane fade" id="editsNavStylesContent" role="tabpanel" aria-labelledby="editsNavStyles">
+
+    <div class="row border-bottom">
+      <div class="col">
+        {{'SIDEBAR_EDIT_TH_CLASSNAME' | translate}}
+      </div>
+      <div class="col">
+        <b>{{'SIDEBAR_EDIT_TH_CSS_KEY' | translate}}</b>: {{'SIDEBAR_EDIT_TH_CSS_VALUE' | translate}}
+      </div>
+    </div>
+    <div class="row border-bottom" *ngFor="let s of selectedNetwork.style">
+      <div class="col">
+        <a role="button" (click)="graphService.highlightBySelector(s.selector)"
+           data-toggle="tooltip" data-placement="bottom"
+           title="{{'SIDEBAR_EDIT_TT_SELECTOR' | translate}} {{s.selector}}">{{s.selector}}</a>
+      </div>
+      <div class="col">
+            <span *ngFor="let css of s.style|keyvalue">
+              <b>{{css.key}}</b>: {{css.value}}
+              <span *ngIf="css.value.toString().indexOf('#') === 0" class="badge badge-pill"
+                    [ngStyle]="{'background-color': css.value, 'border-color': 'lightgray'}">&nbsp;
+              </span>
+              <br>
+            </span>
+      </div>
+    </div>
+
+  </div>
+
 </div>
 
 
-<div class="p-2">
-
-  <div class="form-row">
-
-    <label for="highlightNodesHex">{{'SIDEBAR_EDIT_LABEL_HEX_NODE' | translate}}</label>
-    <input type="text" class="form-control mb-2" id="highlightNodesHex" name="highlightNodesHex"
-           placeholder="#0000ff" [(ngModel)]="highlightNodes">
-
-    <label for="highlightEdgesHex">{{'SIDEBAR_EDIT_LABEL_HEX_EDGE' | translate}}</label>
-    <input type="text" class="form-control mb-2" id="highlightEdgesHex" name="highlightEdgesHex"
-           placeholder="#ff00ff" [(ngModel)]="highlightEdges">
-
-    <label for="highlightDuration">{{'SIDEBAR_EDIT_LABEL_DURATION' | translate}}</label>
-    <input type="number" min="0" step="1" class="form-control mb-2" id="highlightDuration" name="highlightDuration"
-           placeholder="4000" [(ngModel)]="highlightDuration">
-
-    <button type="button" class="btn btn-outline-success btn-block mb-3"
-            (click)="graphService.setHighlightColorAndDuration(highlightNodes, highlightEdges, highlightDuration)">
-      {{'SIDEBAR_EDIT_BTN_SUBMIT' | translate}}</button>
-
-  </div>
-
-  <div class="row border-bottom">
-    <div class="col">
-      {{'SIDEBAR_EDIT_TH_CLASSNAME' | translate}}
-    </div>
-    <div class="col">
-      <b>{{'SIDEBAR_EDIT_TH_CSS_KEY' | translate}}</b>: {{'SIDEBAR_EDIT_TH_CSS_VALUE' | translate}}
-    </div>
-  </div>
-  <div class="row border-bottom" *ngFor="let s of selectedNetwork.style">
-    <div class="col">
-      <a role="button" (click)="graphService.highlightBySelector(s.selector)"
-         data-toggle="tooltip" data-placement="bottom"
-         title="{{'SIDEBAR_EDIT_TT_SELECTOR' | translate}} {{s.selector}}">{{s.selector}}</a>
-    </div>
-    <div class="col">
-      <span *ngFor="let css of s.style|keyvalue">
-            <b>{{css.key}}</b>: {{css.value}}
-        <span *ngIf="css.value.toString().indexOf('#') === 0" class="badge badge-pill"
-              [ngStyle]="{'background-color': css.value, 'border-color': 'lightgray'}">&nbsp;
-        </span>
-        <br>
-      </span>
-    </div>
-  </div>
-</div>
 
 
