[WIP] event listener to log clicks on nodes and edges, no good idea for displaying aspects yet

--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -11,6 +11,21 @@
   </label>
 </div>
 
+<div>
+  NODES
+  <ul>
+    <li *ngFor="let node of graphService.selectedElements.nodes">
+      {{node.id}}
+    </li>
+  </ul>
+  EDGES
+  <ul>
+    <li *ngFor="let edge of graphService.selectedElements.edges">
+      {{edge.id}}
+    </li>
+  </ul>
+</div>
+
 <div class="nav nav-pills mb-3 flex-row" id="editsNav" role="tablist" aria-orientation="horizontal">
   <a class="nav-link active" id="editsNavHighlights" data-toggle="pill" href="#editsNavHighlightsContent" role="tab"
      aria-controls="editsNavHighlights" aria-selected="true">{{'SIDEBAR_EDIT_EDITING_TITLE' | translate}}</a>
