--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -4,7 +4,7 @@
   <p [innerHTML]="selectedNetwork.networkInformation.description"></p>
 </div>
 
-<div class="form-check">
+<div class="form-check mb-2 ml-1">
   <input class="form-check-input" type="checkbox" value="{{showLabels}}" id="showLabels"
          (click)="toggleLabels(!showLabels)">
   <label class="form-check-label" for="showLabels">
@@ -28,26 +28,107 @@
   <!-- Edit: Aspects -->
   <div class="tab-pane fade show active" id="editsNavAspectsContent" role="tabpanel" aria-labelledby="editsNavAspects">
 
+
+    <h5 *ngIf="selectedNetwork.mappings.nodes.length > 0">{{'SIDEBAR_EDIT_ASPECTS_NODES' | translate}}</h5>
+
+        <table class="table table-bordered">
+          <tr *ngFor="let nodeMap of selectedNetwork.mappings.nodes">
+            <td><b>{{nodeMap.classifier}}</b></td>
+            <td>
+              <table class="table table-borderless">
+                <tr class="border-bottom">
+                  <td colspan="1">&nbsp;</td>
+                  <td *ngFor="let styleProp of nodeMap.th"><b>{{styleProp}}</b></td>
+                </tr>
+                <tr *ngFor="let value of nodeMap.values; let i = index">
+                  <td class="border-right">
+                    <a role="button" (click)="graphService.highlightBySelector(nodeMap.selectors[i])"
+                       data-toggle="tooltip" data-placement="bottom"
+                       title="{{'SIDEBAR_EDIT_TT_SELECTOR' | translate}} {{nodeMap.selectors[i]}}"><b>{{value}}</b></a>
+                    </td>
+                  <td *ngFor="let style of nodeMap.styleMap">
+                    <span *ngIf="style.cssValues.length > i">
+
+                      {{style.cssValues[i]}}
+                      <span *ngIf="style.cssValues && style.cssValues[i].toString().indexOf('#') === 0" class="badge badge-pill border"
+                            [ngStyle]="{'background-color': style.cssValues[i]}">
+                        &nbsp;
+                      </span>
+
+                    </span>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+        </table>
+
+<!--    <div class="accordion" id="nodeMappings">-->
+
+<!--      <div class="card" *ngFor="let nodeMap of selectedNetwork.mappings.nodes; let count = index">-->
+
+<!--        <div class="card-header" id="nodeMap{{count}}">-->
+<!--          <h2 class="mb-0">-->
+
+<!--            <button class="btn btn-link btn-block text-left" type="button"-->
+<!--                    data-toggle="collapse"-->
+<!--                    [attr.data-target]="'#nodeMapContent' + count"-->
+<!--                    [attr.aria-expanded]="count === 0 ? 'true' : 'false'"-->
+<!--                    aria-controls="nodeMapContent{{count}}">-->
+
+<!--              {{nodeMap.classifier}}-->
+<!--            </button>-->
+<!--          </h2>-->
+<!--        </div>-->
+
+<!--        <div id="nodeMapContent{{count}}" class="collapse" aria-labelledby="nodeMap{{count}}"-->
+<!--             data-parent="#nodeMappings">-->
+<!--          <div class="card-body">-->
+<!--            <table class="table table-bordered">-->
+<!--              <thead>-->
+<!--              <tr>-->
+<!--                <th>Ausprägung</th>-->
+<!--                <th>korr. Wert</th>-->
+<!--              </tr>-->
+<!--              </thead>-->
+<!--              <tbody>-->
+<!--              <tr *ngFor="let styleMap of nodeMap.styleMap">-->
+<!--                <td>{{styleMap.cssKey}}</td>-->
+<!--                <td>{{styleMap.}}</td>-->
+<!--              </tr>-->
+<!--              </tbody>-->
+<!--            </table>-->
+
+<!--          </div>-->
+<!--        </div>-->
+
+<!--      </div>-->
+
+<!--    </div>-->
+
+
+    <h5 *ngIf="selectedNetwork.mappings.edges.length > 0">{{'SIDEBAR_EDIT_ASPECTS_EDGES' | translate}}</h5>
     <table class="table table-bordered">
-      <tr *ngFor="let nodeMap of selectedNetwork.mappings.nodes">
-        <td><b>{{nodeMap.classifier}}</b></td>
+      <tr *ngFor="let edgeMap of selectedNetwork.mappings.edges">
+        <td><b>{{edgeMap.classifier}}</b></td>
         <td>
           <table class="table table-borderless">
-            <tr>
+            <tr class="border-bottom">
               <td colspan="1">&nbsp;</td>
-              <td *ngFor="let styleProp of nodeMap.th">{{styleProp}}</td>
+              <td *ngFor="let styleProp of edgeMap.th"><b>{{styleProp}}</b></td>
             </tr>
-            <tr *ngFor="let value of nodeMap.values; let i = index">
-              <td>
-                <a role="button" (click)="graphService.highlightBySelector(nodeMap.selectors[i])"
+            <tr *ngFor="let value of edgeMap.values; let i = index">
+              <td class="border-right">
+                <a role="button" (click)="graphService.highlightBySelector(edgeMap.selectors[i])"
                    data-toggle="tooltip" data-placement="bottom"
-                   title="{{'SIDEBAR_EDIT_TT_SELECTOR' | translate}} {{nodeMap.selectors[i]}}">{{value}}</a>
-                </td>
-              <td *ngFor="let style of nodeMap.styleMap">
+                   title="{{'SIDEBAR_EDIT_TT_SELECTOR' | translate}} {{edgeMap.selectors[i]}}"><b>{{value}}</b></a>
+              </td>
+              <td *ngFor="let style of edgeMap.styleMap">
                 <span *ngIf="style.cssValues.length > i">
 
                   {{style.cssValues[i]}}
-                  <span *ngIf="style.cssValues && style.cssValues[i].toString().indexOf('#') === 0" class="badge badge-pill border"
+                  <span *ngIf="style.cssValues && style.cssValues[i].toString().indexOf('#') === 0"
+                        class="badge badge-pill border"
                         [ngStyle]="{'background-color': style.cssValues[i]}">
                     &nbsp;
                   </span>
