[DONE] displaying continuous numeric mappings, now working on solution for hex color codes mapped continuously

--- a/src/app/components/main-info/main-info.component.html
+++ b/src/app/components/main-info/main-info.component.html
@@ -2,6 +2,20 @@
 
 <hr>
 
+<h1>THIS IS A TEST</h1>
+
+<!--<div style="display:block">-->
+
+<!--<canvas baseChart id="myChart" width="400" height="400"-->
+<!--        [datasets]="lineChartData"-->
+<!--        [labels]="lineChartLabels"-->
+<!--        [chartType]="'line'"-->
+<!--        [legend]="true"-->
+<!--        [colors]="lineChartColors"-->
+<!--        [options]="lineChartOptions"></canvas>-->
+
+<!--</div>-->
+
 <h3>{{'MAIN_INFO_STEPS_TITLE' | translate}}</h3>
 <p>{{'MAIN_INFO_STEPS_DESCRIPTION' | translate}}</p>
 <ul>
