--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -13,6 +13,21 @@
 </div>
 
 
+<div *ngIf="showChart" style="display: block">
+  <canvas id="mappingsChart" baseChart [ngStyle]="{'width.%': 100, 'height.px': 300}"
+          [chartType]="'line'"
+          [legend]="true"
+          [datasets]="lineChartData"
+          [labels]="lineChartLabels"
+          [colors]="lineChartColors"
+          [options]="lineChartOptions"></canvas>
+</div>
+
+<div *ngIf="showColorGradient" [ngStyle]="{'width.%': 100, 'height.px': 300, display: 'block'}">
+
+</div>
+
+
 <div class="nav nav-pills mb-3 flex-row" id="editsNav" role="tablist" aria-orientation="horizontal">
   <a class="nav-link active" id="editsNavAspects" data-toggle="pill" href="#editsNavAspectsContent" role="tab"
      aria-controls="editsNavAspects" aria-selected="false">{{'SIDEBAR_EDIT_ATTRIBUTES_TITLE' | translate}}</a>
@@ -28,84 +43,92 @@
   <!-- Edit: Aspects -->
   <div class="tab-pane fade show active" id="editsNavAspectsContent" role="tabpanel" aria-labelledby="editsNavAspects">
 
-
     <h5 *ngIf="selectedNetwork.mappings.nodes.length > 0">{{'SIDEBAR_EDIT_ASPECTS_NODES' | translate}}</h5>
 
-        <table class="table table-bordered">
-          <tr *ngFor="let nodeMap of selectedNetwork.mappings.nodes">
-            <td><b>{{nodeMap.classifier}}</b></td>
-            <td>
-              <table class="table table-borderless">
-                <tr class="border-bottom">
-                  <td colspan="1">&nbsp;</td>
-                  <td *ngFor="let styleProp of nodeMap.th"><b>{{styleProp}}</b></td>
-                </tr>
-                <tr *ngFor="let value of nodeMap.values; let i = index">
-                  <td class="border-right">
-                    <a role="button" (click)="graphService.highlightBySelector(nodeMap.selectors[i])"
-                       data-toggle="tooltip" data-placement="bottom"
-                       title="{{'SIDEBAR_EDIT_TT_SELECTOR' | translate}} {{nodeMap.selectors[i]}}"><b>{{value}}</b></a>
-                    </td>
-                  <td *ngFor="let style of nodeMap.styleMap">
+    <table class="table table-bordered">
+      <tr *ngFor="let nodeMap of selectedNetwork.mappings.nodes">
+        <td><b>{{nodeMap.classifier}}</b></td>
+        <td>
+          <table class="table table-borderless">
+            <tr class="border-bottom">
+              <td colspan="1">&nbsp;</td>
+              <td *ngFor="let styleProp of nodeMap.th"><b>{{styleProp}}</b></td>
+            </tr>
+            <tr *ngFor="let value of nodeMap.values; let i = index">
+              <td class="border-right">
+                <a role="button" (click)="graphService.highlightBySelector(nodeMap.selectors[i])"
+                   data-toggle="tooltip" data-placement="bottom"
+                   title="{{'SIDEBAR_EDIT_TT_SELECTOR' | translate}} {{nodeMap.selectors[i]}}"><b>{{value}}</b></a>
+              </td>
+              <td *ngFor="let style of nodeMap.styleMap">
                     <span *ngIf="style.cssValues.length > i">
 
                       {{style.cssValues[i]}}
-                      <span *ngIf="style.cssValues && style.cssValues[i].toString().indexOf('#') === 0" class="badge badge-pill border"
+                      <span *ngIf="style.cssValues && style.cssValues[i].toString().indexOf('#') === 0"
+                            class="badge badge-pill border"
                             [ngStyle]="{'background-color': style.cssValues[i]}">
                         &nbsp;
                       </span>
 
                     </span>
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-        </table>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
 
-<!--    <div class="accordion" id="nodeMappings">-->
 
-<!--      <div class="card" *ngFor="let nodeMap of selectedNetwork.mappings.nodes; let count = index">-->
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let edgeMap of selectedNetwork.mappings.edgesContinuous" (click)="displayMapping(edgeMap.displayChart, edgeMap.chart)">
+        <button class="btn btn-block btn-outline-danger">
+          <b>{{edgeMap.chart.lineChartOptions.title.text[0]}}</b> {{edgeMap.chart.lineChartOptions.title.text[1] | translate}} <b>{{edgeMap.chart.lineChartOptions.title.text[2]}}</b>
+        </button>
+      </li>
+    </ul>
 
-<!--        <div class="card-header" id="nodeMap{{count}}">-->
-<!--          <h2 class="mb-0">-->
+    <!--    <div class="accordion" id="nodeMappings">-->
 
-<!--            <button class="btn btn-link btn-block text-left" type="button"-->
-<!--                    data-toggle="collapse"-->
-<!--                    [attr.data-target]="'#nodeMapContent' + count"-->
-<!--                    [attr.aria-expanded]="count === 0 ? 'true' : 'false'"-->
-<!--                    aria-controls="nodeMapContent{{count}}">-->
+    <!--      <div class="card" *ngFor="let nodeMap of selectedNetwork.mappings.nodes; let count = index">-->
 
-<!--              {{nodeMap.classifier}}-->
-<!--            </button>-->
-<!--          </h2>-->
-<!--        </div>-->
+    <!--        <div class="card-header" id="nodeMap{{count}}">-->
+    <!--          <h2 class="mb-0">-->
 
-<!--        <div id="nodeMapContent{{count}}" class="collapse" aria-labelledby="nodeMap{{count}}"-->
-<!--             data-parent="#nodeMappings">-->
-<!--          <div class="card-body">-->
-<!--            <table class="table table-bordered">-->
-<!--              <thead>-->
-<!--              <tr>-->
-<!--                <th>Ausprägung</th>-->
-<!--                <th>korr. Wert</th>-->
-<!--              </tr>-->
-<!--              </thead>-->
-<!--              <tbody>-->
-<!--              <tr *ngFor="let styleMap of nodeMap.styleMap">-->
-<!--                <td>{{styleMap.cssKey}}</td>-->
-<!--                <td>{{styleMap.}}</td>-->
-<!--              </tr>-->
-<!--              </tbody>-->
-<!--            </table>-->
+    <!--            <button class="btn btn-link btn-block text-left" type="button"-->
+    <!--                    data-toggle="collapse"-->
+    <!--                    [attr.data-target]="'#nodeMapContent' + count"-->
+    <!--                    [attr.aria-expanded]="count === 0 ? 'true' : 'false'"-->
+    <!--                    aria-controls="nodeMapContent{{count}}">-->
 
-<!--          </div>-->
-<!--        </div>-->
+    <!--              {{nodeMap.classifier}}-->
+    <!--            </button>-->
+    <!--          </h2>-->
+    <!--        </div>-->
 
-<!--      </div>-->
+    <!--        <div id="nodeMapContent{{count}}" class="collapse" aria-labelledby="nodeMap{{count}}"-->
+    <!--             data-parent="#nodeMappings">-->
+    <!--          <div class="card-body">-->
+    <!--            <table class="table table-bordered">-->
+    <!--              <thead>-->
+    <!--              <tr>-->
+    <!--                <th>Ausprägung</th>-->
+    <!--                <th>korr. Wert</th>-->
+    <!--              </tr>-->
+    <!--              </thead>-->
+    <!--              <tbody>-->
+    <!--              <tr *ngFor="let styleMap of nodeMap.styleMap">-->
+    <!--                <td>{{styleMap.cssKey}}</td>-->
+    <!--                <td>{{styleMap.}}</td>-->
+    <!--              </tr>-->
+    <!--              </tbody>-->
+    <!--            </table>-->
 
-<!--    </div>-->
+    <!--          </div>-->
+    <!--        </div>-->
 
+    <!--      </div>-->
+
+    <!--    </div>-->
 
     <h5 *ngIf="selectedNetwork.mappings.edges.length > 0">{{'SIDEBAR_EDIT_ASPECTS_EDGES' | translate}}</h5>
     <table class="table table-bordered">
