--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -23,7 +23,7 @@
           [options]="lineChartOptions"></canvas>
 </div>
 
-<div *ngIf="showColorGradient" [style.width.%]="100" [style.height.px]="300" [style.background]="gradientBackground">
+<div *ngIf="showColorGradient" [style.width.%]="100" [style.height.px]="300" [style.background]="gradientBackground" class="mb-3">
 </div>
 
 <div class="nav nav-pills mb-3 flex-row" id="editsNav" role="tablist" aria-orientation="horizontal">
@@ -41,10 +41,10 @@
   <!-- Edit: Aspects -->
   <div class="tab-pane fade show active" id="editsNavAspectsContent" role="tabpanel" aria-labelledby="editsNavAspects">
 
-    <h5 *ngIf="selectedNetwork.mappings.nodes.length > 0">{{'SIDEBAR_EDIT_ASPECTS_NODES' | translate}}</h5>
+    <h5 *ngIf="selectedNetwork.mappings.nodesDiscrete.length > 0 || selectedNetwork.mappings.nodesContinuous.length > 0">{{'SIDEBAR_EDIT_ASPECTS_NODES' | translate}}</h5>
 
-    <table class="table table-bordered">
-      <tr *ngFor="let nodeMap of selectedNetwork.mappings.nodes">
+    <table class="table table-bordered" *ngIf="selectedNetwork.mappings.nodesDiscrete.length > 0">
+      <tr *ngFor="let nodeMap of selectedNetwork.mappings.nodesDiscrete">
         <td><b>{{nodeMap.classifier}}</b></td>
         <td>
           <table class="table table-borderless">
@@ -76,63 +76,29 @@
       </tr>
     </table>
 
-
-    <ul class="list-group">
-      <li class="list-group-item" *ngFor="let edgeMap of selectedNetwork.mappings.edgesContinuous"
-          (click)="displayMapping(edgeMap.displayChart, edgeMap)">
-        <button class="btn btn-block btn-outline-danger">
-          <b>{{edgeMap.chart.lineChartOptions.title.text[0]}}</b> {{edgeMap.chart.lineChartOptions.title.text[1] | translate}}
-          <b>{{edgeMap.chart.lineChartOptions.title.text[2]}}</b>
-        </button>
-      </li>
+    <ul class="list-group" *ngIf="selectedNetwork.mappings.nodesContinuous.length > 0">
+      <span *ngFor="let nodeMap of selectedNetwork.mappings.nodesContinuous">
+        <li class="list-group-item" *ngIf="nodeMap.chartValid">
+          <button class="btn btn-block btn-outline-danger" (click)="displayMapping(nodeMap.chart, [])">
+            <b>{{nodeMap.chart.lineChartOptions.title.text[0]}}</b>
+            {{nodeMap.chart.lineChartOptions.title.text[1] | translate}}
+            <b>{{nodeMap.chart.lineChartOptions.title.text[2]}}</b>
+          </button>
+        </li>
+        <li class="list-group-item" *ngIf="nodeMap.gradientValid">
+          <button class="btn btn-block btn-outline-danger" (click)="displayMapping(null, nodeMap.colorGradient)">
+            <b>{{nodeMap.chart.lineChartOptions.title.text[0]}}</b>
+            {{nodeMap.chart.lineChartOptions.title.text[1] | translate}}
+            <b>{{nodeMap.chart.lineChartOptions.title.text[2]}}</b>
+          </button>
+        </li>
+      </span>
     </ul>
 
-    <!--    <div class="accordion" id="nodeMappings">-->
+    <h5 *ngIf="selectedNetwork.mappings.edgesDiscrete.length > 0 || selectedNetwork.mappings.edgesContinuous.length > 0">{{'SIDEBAR_EDIT_ASPECTS_EDGES' | translate}}</h5>
 
-    <!--      <div class="card" *ngFor="let nodeMap of selectedNetwork.mappings.nodes; let count = index">-->
-
-    <!--        <div class="card-header" id="nodeMap{{count}}">-->
-    <!--          <h2 class="mb-0">-->
-
-    <!--            <button class="btn btn-link btn-block text-left" type="button"-->
-    <!--                    data-toggle="collapse"-->
-    <!--                    [attr.data-target]="'#nodeMapContent' + count"-->
-    <!--                    [attr.aria-expanded]="count === 0 ? 'true' : 'false'"-->
-    <!--                    aria-controls="nodeMapContent{{count}}">-->
-
-    <!--              {{nodeMap.classifier}}-->
-    <!--            </button>-->
-    <!--          </h2>-->
-    <!--        </div>-->
-
-    <!--        <div id="nodeMapContent{{count}}" class="collapse" aria-labelledby="nodeMap{{count}}"-->
-    <!--             data-parent="#nodeMappings">-->
-    <!--          <div class="card-body">-->
-    <!--            <table class="table table-bordered">-->
-    <!--              <thead>-->
-    <!--              <tr>-->
-    <!--                <th>Ausprägung</th>-->
-    <!--                <th>korr. Wert</th>-->
-    <!--              </tr>-->
-    <!--              </thead>-->
-    <!--              <tbody>-->
-    <!--              <tr *ngFor="let styleMap of nodeMap.styleMap">-->
-    <!--                <td>{{styleMap.cssKey}}</td>-->
-    <!--                <td>{{styleMap.}}</td>-->
-    <!--              </tr>-->
-    <!--              </tbody>-->
-    <!--            </table>-->
-
-    <!--          </div>-->
-    <!--        </div>-->
-
-    <!--      </div>-->
-
-    <!--    </div>-->
-
-    <h5 *ngIf="selectedNetwork.mappings.edges.length > 0">{{'SIDEBAR_EDIT_ASPECTS_EDGES' | translate}}</h5>
-    <table class="table table-bordered">
-      <tr *ngFor="let edgeMap of selectedNetwork.mappings.edges">
+    <table class="table table-bordered" *ngIf="selectedNetwork.mappings.edgesDiscrete.length > 0">
+      <tr *ngFor="let edgeMap of selectedNetwork.mappings.edgesDiscrete">
         <td><b>{{edgeMap.classifier}}</b></td>
         <td>
           <table class="table table-borderless">
@@ -163,6 +129,26 @@
         </td>
       </tr>
     </table>
+
+    <ul class="list-group" *ngIf="selectedNetwork.mappings.edgesContinuous.length > 0">
+      <span *ngFor="let edgeMap of selectedNetwork.mappings.edgesContinuous">
+        <li class="list-group-item" *ngIf="edgeMap.chartValid">
+          <button class="btn btn-block btn-outline-danger" (click)="displayMapping(edgeMap.chart, [])">
+            <b>{{edgeMap.chart.lineChartOptions.title.text[0]}}</b>
+            {{edgeMap.chart.lineChartOptions.title.text[1] | translate}}
+            <b>{{edgeMap.chart.lineChartOptions.title.text[2]}}</b>
+          </button>
+        </li>
+        <li class="list-group-item" *ngIf="edgeMap.gradientValid">
+          <button class="btn btn-block btn-outline-danger" (click)="displayMapping(null, edgeMap.colorGradient)">
+            <b>{{edgeMap.chart.lineChartOptions.title.text[0]}}</b>
+            {{edgeMap.chart.lineChartOptions.title.text[1] | translate}}
+            <b>{{edgeMap.chart.lineChartOptions.title.text[2]}}</b>
+          </button>
+        </li>
+
+      </span>
+    </ul>
 
   </div>
 
