--- a/src/app/components/main-info/main-info.component.html
+++ b/src/app/components/main-info/main-info.component.html
@@ -2,20 +2,6 @@
 
 <hr>
 
-<h1>THIS IS A TEST</h1>
-
-<!--<div style="display:block">-->
-
-<!--<canvas baseChart id="myChart" width="400" height="400"-->
-<!--        [datasets]="lineChartData"-->
-<!--        [labels]="lineChartLabels"-->
-<!--        [chartType]="'line'"-->
-<!--        [legend]="true"-->
-<!--        [colors]="lineChartColors"-->
-<!--        [options]="lineChartOptions"></canvas>-->
-
-<!--</div>-->
-
 <h3>{{'MAIN_INFO_STEPS_TITLE' | translate}}</h3>
 <p>{{'MAIN_INFO_STEPS_DESCRIPTION' | translate}}</p>
 <ul>
@@ -24,6 +10,16 @@
   <li>{{'MAIN_INFO_STEPS_STEP_3' | translate}}</li>
   <li>{{'MAIN_INFO_STEPS_STEP_4' | translate}}</li>
   <li>{{'MAIN_INFO_STEPS_STEP_5' | translate}}</li>
+</ul>
+
+<hr>
+
+<h3>{{'MAIN_INFO_LAYOUT_TITLE' | translate}}</h3>
+<p>{{'MAIN_INFO_LAYOUT_DESCRIPTION' | translate}}</p>
+<ul>
+  <li [innerHTML]="'MAIN_INFO_LAYOUT_STEP_1' | translate"></li>
+  <li [innerHTML]="'MAIN_INFO_LAYOUT_STEP_2' | translate"></li>
+  <li [innerHTML]="'MAIN_INFO_LAYOUT_STEP_3' | translate"></li>
 </ul>
 
 <hr>
