[FIX] resizing main view and sidebar is now also possible for graph view with originally fixed 100% width

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,5 @@
-.drag-bar {
-
-}
-
 .drag-bar:hover {
-  border: darkred solid;
-  background-color: darkred;
+  background-color: green;
   visibility: initial;
 }
 
