--- a/src/app/components/main-graph/main-graph.component.html
+++ b/src/app/components/main-graph/main-graph.component.html
@@ -1,4 +1,7 @@
-<h1>{{'MAIN_GRAPH_TITLE' | translate}}</h1>
+<h1>
+  <span class="mr-5">{{'MAIN_GRAPH_TITLE' | translate}}</span>
+  <button class="btn btn-outline-success" (click)="fit()">{{'MAIN_GRAPH_BTN_FIT' | translate}}</button>
+</h1>
 
 <hr>
 
