--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -13,11 +13,13 @@
 </div>
 
 <!-- chart for continuous mappings -->
-<div *ngIf="showChart" style="display: block">
-  <h5><b>
-    {{lookup}}</b>
-    {{'SIDEBAR_EDIT_MAPPED_BY' | translate}}
-    <b>{{attribute}}</b>
+<div *ngIf="showChart">
+  <h5>
+    <a [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, index]} }]" role="button">
+      <b>{{lookup}}</b>
+      {{'SIDEBAR_EDIT_MAPPED_BY' | translate}}
+      <b>{{attribute}}</b>
+    </a>
   </h5>
   <canvas id="mappingsChart" baseChart [ngStyle]="{'width.%': 100, 'height.px': 300}"
           [chartType]="'line'"
@@ -89,16 +91,16 @@
     </table>
 
     <ul class="list-group" *ngIf="selectedNetwork.mappings.nodesContinuous.length > 0">
-      <span *ngFor="let nodeMap of selectedNetwork.mappings.nodesContinuous">
+      <span *ngFor="let nodeMap of selectedNetwork.mappings.nodesContinuous; let index = index">
         <li class="list-group-item" *ngIf="nodeMap.chartValid">
-          <button class="btn btn-block btn-outline-danger" (click)="displayMapping(nodeMap.chart, [])">
+          <button class="btn btn-block btn-outline-danger" (click)="displayMapping(nodeMap.chart, [], 'nc' + index)">
             <b>{{nodeMap.title[0]}}</b>
             {{'SIDEBAR_EDIT_MAPPED_BY' | translate}}
             <b> {{nodeMap.title[1]}}</b>
           </button>
         </li>
         <li class="list-group-item" *ngIf="nodeMap.gradientValid">
-          <button class="btn btn-block btn-outline-danger" (click)="displayMapping(null, nodeMap.colorGradient)">
+          <button class="btn btn-block btn-outline-danger" (click)="displayMapping(null, nodeMap.colorGradient, 'nc' + index)">
             <b>{{nodeMap.title[0]}}</b>
             {{'SIDEBAR_EDIT_MAPPED_BY' | translate}}
             <b> {{nodeMap.title[1]}}</b>
@@ -142,16 +144,16 @@
     </table>
 
     <ul class="list-group" *ngIf="selectedNetwork.mappings.edgesContinuous.length > 0">
-      <span *ngFor="let edgeMap of selectedNetwork.mappings.edgesContinuous">
+      <span *ngFor="let edgeMap of selectedNetwork.mappings.edgesContinuous; let index = index">
         <li class="list-group-item" *ngIf="edgeMap.chartValid">
-          <button class="btn btn-block btn-outline-danger" (click)="displayMapping(edgeMap.chart, [])">
+          <button class="btn btn-block btn-outline-danger" (click)="displayMapping(edgeMap.chart, [], 'ec' + index)">
             <b>{{edgeMap.title[0]}}</b>
             {{'SIDEBAR_EDIT_MAPPED_BY' | translate}}
             <b>{{edgeMap.title[1]}}</b>
           </button>
         </li>
         <li class="list-group-item" *ngIf="edgeMap.gradientValid">
-          <button class="btn btn-block btn-outline-danger" (click)="displayMapping(null, edgeMap.colorGradient)">
+          <button class="btn btn-block btn-outline-danger" (click)="displayMapping(null, edgeMap.colorGradient, 'ec' + index)">
             <b>{{edgeMap.title[0]}}</b>
             {{'SIDEBAR_EDIT_MAPPED_BY' | translate}}
             <b>{{edgeMap.title[1]}}</b>
